Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,62 +4,72 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Vanilla by adhithyan15</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
-    <div class="wrapper">
+
       <header>
-        <h1 class="header">Vanilla</h1>
-        <p class="header">Vanilla is a small markup language written to bring markdown ideas to latex</p>
-
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/adhithyan15/vanilla/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/adhithyan15/vanilla/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/adhithyan15/vanilla">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/adhithyan15">adhithyan15</a></p>
-
-
+        <h1>Vanilla</h1>
+        <p>Vanilla is a super awesome extension of LaTex Typesetting System</p>
       </header>
+
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/adhithyan15/vanilla" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/adhithyan15/vanilla/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/adhithyan15/vanilla/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
       <section>
         <h3>Welcome to Vanilla</h3>
 
-<p>Vanilla is a small markup language that is strictly a superset of the LaTex typesetting system. It tries to remove the barriers for people to get the benefits of LaTex.It greatly simplifies several features that are available in LaTex and adds more features on top to increase the productivity of the users. It brings several ideas of Markdown to LaTex and also adds ideas inspired from Less CSS, Matlab and Ruby. It is completely interoperable and backwards compatible with LaTex. It is an ongoing project. So please check back for more updates.   </p>
+<p>Vanilla is a super awesome extension of LaTex that aims to reduce the learning curve of LaTex and reduce verbosity in the LaTex code. It enhances a lot of features available in LaTex and adds features on top of it to enhance productivity of LaTex users. It was greatly inspired by Markdown, Less CSS, Ruby and Matlab. Read the documentation to know more about Vanilla. </p>
 
 <h3>Technical Details</h3>
 
-<p>Vanilla compiler code named "Hippo" is written in Ruby. It is a command line utility that converts .vaml(Vanilla extension) into .tex(LaTex extension). It is available in both windows and mac environments. Vanilla provides Ruby as an embedded scripting language for user's programming needs.   </p>
+<p>Vanilla compiler was originally conceived and written in Python. It was then translated into Ruby. The compiler is built on top of PDFLatex and PDFLatex is a dependency for Vanilla. The command line utility is aimed towards Windows platform but technically it is  a cross platform product. Please read the documentation to know more about the internal workings of the compiler. A debugger and error corrector are being written and will be released in Version 2.   </p>
 
 <h3>Documentation</h3>
 
-<p>Documentation for this project is currently being written. It will be available very shortly. </p>
+<p>Documentation is provided in the repo itself. The documentation is very extensive.  So please read through it for more information regarding all the topics. </p>
 
 <h3>Authors and Contributors</h3>
 
-<p>I,Adhithya Rajasekaran(<a href="https://github.com/adhithyan15" class="user-mention">@adhithyan15</a>), with help from my sister and my mother wrote this project. I am looking for some awesome contributors to this project.</p>
+<p>Written by Adhithya Rajasekaran (<a href="https://github.com/adhithyan15" class="user-mention">@adhithyan15</a>) and his sister Sri Madhavi Rajasekaran. Adhithya's mother Renuka Rajasekaran provided guidance and advice for this project. The project needs contributors. So if you are interested, please email Adhithya at the address listed below. </p>
 
 <h3>Licensing</h3>
 
-<p>I am releasing all the source code under MIT License.</p>
+<p>The  source code is released under the MIT License. </p>
 
 <h3>Support or Contact</h3>
 
-<p>If you find a bug, please post an issue and I will look into it as soon as possible. If you want to contact me, please send me an email at <a href="http://scr.im/adhith">http://scr.im/adhith</a></p>
+<p>If you find a bug, please post an issue and it will be resolved as soon as possible. You can contact Adhithya at adhithyan15 at gmail dotcom. </p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>Project maintained by <a href="https://github.com/adhithyan15">adhithyan15</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
