--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Vanilla by adhithyan15</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/adhithyan15/vanilla">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/adhithyan15/vanilla/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/adhithyan15/vanilla/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <header>
-      <div class="container">
-        <h1>Vanilla</h1>
-        <h2>Vanilla is a simple yet power preprocessor for LaTex</h2>
+    <div class="wrapper">
 
-        <section id="downloads">
-          <a href="https://github.com/adhithyan15/vanilla/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/adhithyan15/vanilla/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/adhithyan15/vanilla" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+      <section>
+        <div id="title">
+          <h1>Vanilla</h1>
+          <p>Vanilla is a simple yet power preprocessor for LaTex</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/adhithyan15">adhithyan15</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
 
-    <div class="container">
-      <section id="main_content">
         <h3>Welcome to Vanilla</h3>
 
 <p>Vanilla is a powerful LaTex preprocessor. It works based on the DRY(Don't Repeat Yourself) principle. It aims to reduce the entry barrier and the learning curve for Latex by simplifying the syntax and also reducing the verbosity of Latex. </p>
@@ -59,8 +69,9 @@ Contributors: None. If you are interested in helping out, you are more than welc
 
 <p>If you find a bug, please post an issue and it will be resolved as soon as possible. You can contact Adhithya at adhithyan15 at gmail dotcom. </p>
       </section>
-    </div>
 
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
